--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>O que eu faço</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Trabalho como Jovem Aprendiz e sou um estudante.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -61,7 +59,7 @@
 					<header>
 						<h2>Quem eu sou</h2>
 					</header>
-					<p>Meu nome é Erasmo e sou apenas um estudante. Fazendo um Curso.</p>
+					<p>Meu nome é <strong>Erasmo</strong>, tenho 20 anos e sou apenas um estudante. Fazendo um Curso.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
