--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Erasmo Santos</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
