--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<header>
 						<h2>O que eu faço</h2>
 					</header>
-					<p>Trabalho como Jovem Aprendiz e sou um estudante.</p>
+					<p>Trabalho como <strong>Jovem Aprendiz</strong> e sou um estudante.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -68,10 +68,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Meu trabalho</h2>
+						<p>Atualmente exercendo atividades de suporte e administrativas</p>
 					</header>
 
 					<!-- Gallery  -->
